--- a/app/globals.css
+++ b/app/globals.css
@@ -9,5 +9,9 @@
 @media (prefers-color-scheme: dark) {
 }
 
-body {
+@layer base {
+  button:not(:disabled),
+  [role='button']:not(:disabled) {
+    cursor: pointer;
+  }
 }
